<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" android:orientation="vertical" android:layout_width="match_parent" android:layout_height="match_parent">
    <TextView android:textSize="20sp" android:id="@+id/textView1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/Purpose"/>
    <Button android:id="@+id/button1" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/Copy" android:hint="Copy from flash/file to flash/file"/>
    <Button android:id="@+id/button2" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/EraseDelete" android:hint="Erase your memory"/>
    <Button android:id="@+id/button3" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/DetectChip" android:hint="Detect your memory type."/>
    <TextView android:textSize="20sp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/Purpose1"/>
    <Button android:id="@+id/button4" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/Service"/>
    <Button android:id="@+id/button5" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/Application"/>
    <Button android:id="@+id/button6" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/DIY"/>
    <ScrollView android:id="@+id/ScrollView02" android:scrollbars="vertical" android:layout_width="match_parent" android:layout_height="wrap_content" android:fillViewport="true">
        <TextView android:textSize="18sp" android:textColor="#ffffffff" android:id="@+id/log" android:layout_width="match_parent" android:layout_height="match_parent"/>
    </ScrollView>
</LinearLayout>
